--- a/tools.html
+++ b/tools.html
@@ -56,7 +56,7 @@
 		}
 		
 	</style>
-	<script src="http://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/sugar/2.0.6/sugar.min.js"></script>
 	<script src="./handwriting.js"></script>
 </head>
