some css changed

--- a/tools.html
+++ b/tools.html
@@ -6,7 +6,7 @@
 	<title>Utility</title>
 	<style>
 		p {
-			font-size: 22px;
+			font-size: 18px;
 			line-height: 1.3;
 			line-break: strict;
 			text-align: justify;
@@ -50,6 +50,10 @@
 			width: 200px;
 		}
 		
+		.input {
+			zoom: 80%;
+		}
+		
 		.clearfix::after{
 			content: " ";
 			clear: both;
@@ -66,7 +70,7 @@
 			<textarea id="inputText" placeholder="ここに任意の文字を入力"></textarea>
 		</div>
 		<div class="i_right">
-			<input id="fontsize" type="number" placeholder="フォント大きさ(標準: 22)"> px<br/>
+			<input id="fontsize" type="number" placeholder="フォント大きさ(標準: 18)"> px<br/>
 			<input id="beauty" type="number" placeholder="文字の綺麗さ(標準: 250)"><br/>
 			<input id="lineheight" type="number" placeholder="行間(標準: 1.3)"><br/>
 			<label><input id="withoutRandom" type="checkbox">ランダム化なし</label><br/>
